2010-09-20  Christopher Faylor  <me+cygwin@cgf.cx>

	* include/sys/cygwin.h (PID_NOTCYGWIN): New enum.
	* spawn.cc (spawn_guts): Set a flag when a process is not a cygwin
	process.
	* fhandler_tty.cc (fhandler_tty_slave::init): Remove previous change.
	Try a different method to determine when we should become the process
	group owner.
	* signal.cc (kill0): Remove archaic code which dealt with never-set
	flag.

2010-09-20  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_tty.cc (fhandler_tty_slave::init): Add additional checks to
	determine when a process should grab control of a tty's pgid.  Use
	being_debugged() for consistency.
	* debug.h (being_debugged): Remove vestige of win9x accommodation.

2010-09-19  Christopher Faylor  <me+cygwin@cgf.cx>

	* wincap.h (wincaps::has_buggy_thread_startup): Declare.
	(wincapc::has_buggy_thread_startup): Ditto.
	* wincap.cc::wincap_*): Accommodate has_buggy_thread_startup. 
	(wincapc::init): Explicitly turn off has_buggy_thread_startup if not
	WOW64.
	* cygthread.h (cygthread::thread_handle): Declare/define new method.
	* dcrt0.cc (_dll_crt0): Don't call __sinit here.
	(dll_crt0_0): Don't call sigproc_init during initialization
	if wincap.has_buggy_thread_startup().
	(dll_crt0_1): Defer sigproc_init to here when
	wincap.has_buggy_thread_startup().  Call __sinit after we've determined
	that we're not forking.
	(__main): Rework comments.  Add potential future reminder.

2010-09-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Fetch number
	of links and inode number only if path has good inodes.
	(fhandler_base::fstat_by_name): Fetch inode number only if path has
	good inodes.

2010-09-14  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Make sure AllocationSize and EndOfFile
	are stored in the right order when fetching the info from the
	NtQueryDirectoryFile result.

2010-09-13  Corinna Vinschen  <corinna@vinschen.de>
